Openapi fix
